Corrected two line list alignment

--- a/client/resources/styles/app.scss
+++ b/client/resources/styles/app.scss
@@ -545,6 +545,11 @@ main {
     height: 80px;
 }
 
+.mdc-list--two-line .mdc-list-item__text {
+    top: 4px;
+    position: relative;
+}
+
 .mdc-list--three-line .mdc-list-item {
     height: 108px;
 
