--- a/client/resources/styles/bundle.css
+++ b/client/resources/styles/bundle.css
@@ -5475,6 +5475,10 @@ main {
 .mdc-list--with-chip .mdc-list-item {
   height: 80px; }
 
+.mdc-list--two-line .mdc-list-item__text {
+  top: 4px;
+  position: relative; }
+
 .mdc-list--three-line .mdc-list-item {
   height: 108px; }
   .mdc-list--three-line .mdc-list-item .mdc-list-item__secondary-text:nth-child(2) {
